--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Vujahday+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Vujahday+Script&display=swap');
+@import url(https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css);
 body {
     color: #264653;
     margin: 0 ;
+    text-align: center;
+    font-family: serif;
+}
+
+h1 {
+    margin-top: 0;
+    font-family: 'Vujahday Script', cursive;
 }
 #name_section {
     background-color: #F4A261;
     position: relative;
     overflow: auto;
+    padding-top: 80px;
     
+}
+#bottom_cloud {
+    position: absolute;
+    top: 25%;
+    left: 28%;
+}
+
+#top_cloud {
+    position: absolute;
+    top: 5%;
+    right: 28%;
+}
+#subtitle {
+    font-family: 'Inconsolata', monospace;
 }
